update post: Complete Guide to Telegram Channel Data Retrieval

--- a/cmhp1l988000002l43rzg53ic.md
+++ b/cmhp1l988000002l43rzg53ic.md
@@ -1,8 +1,9 @@
 ---
-title: "Complete Guide to Telegram Channel Data Retrieval: Historical Posts & Real-time Monitoring"
+title: "Complete Guide to Telegram Channel Data Retrieval"
 datePublished: Fri Nov 07 2025 16:00:35 GMT+0000 (Coordinated Universal Time)
 cuid: cmhp1l988000002l43rzg53ic
 slug: article-2025-11-08-0057
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1762532780628/61b7714e-7e96-4ef6-a02f-548de04d8b57.png
 tags: tutorial, python, apis, automation, real-time, telegram, data-scraping, data-engineering, bot-development, telethon
 
 ---
@@ -125,7 +126,7 @@ For public channels:
 await client.join_channel('@channelname')
 ```
 
-For private channels (requires invite link):
+For private channels (requires an invite link):
 
 ```python
 from telethon.tl.functions.messages import ImportChatInviteRequest
@@ -824,7 +825,7 @@ async def monitored_process(message):
 
 * ⚠️ Complex authentication (phone verification, session management)
     
-* ⚠️ Rate limiting challenges (FLOOD\_WAIT errors)
+* ⚠️ Rate-limiting challenges (FLOOD\_WAIT errors)
     
 * ⚠️ More code complexity
     
